--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
-            <div class="header-text">
-                <h1>Hi, I am <span>Sarvesh Yadav</span></h1>
-                <h2>Full Stack Developer</h2>
+            <div class="intro">
+                <div class="header-text">
+                    <h1>Hi, I am <span>Sarvesh Yadav</span></h1>
+                    <h2>Full Stack Developer</h2>
+                </div>
+                <div class="profile-picture">
+                        <img src="Images/Sarvesh2.png" alt="">     
+                </div>
             </div>
         </div>
     </div>
@@ -33,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="Images/Sarvesh2.png">
+                    <img src="Images/Sarvesh1.png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
