--- a/index.html
+++ b/index.html
@@ -64,15 +64,20 @@
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>10th</span></li>
-                                <li><span>12th</span></li>
-                                <li><span>B.E</span></li>
+                                <li><span>Terna Engineering College, Navi Mumbai.</span> <br>Bachelor of Engineering<br>
+                                    Electronics and Telecommunication Engineering <br>
+                                    Jul 16 - Nov 20</li>
+                                <li><span>Gyanodaya Vidya Mandir.</span> <br> Intermediate (Class XII) <br>
+                                    Science <br>
+                                    Jun 14 - May 16</li>
+                                <li><span>R.J Thakur English Medium School.</span> <br> Matriculation (Class X) <br>
+                                    Jun 13 - May 14</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="experiance">
                             <ul>
-                                <li><span>THyrocare</span></li>
-                                <li><span>Q.K</span></li>
+                                <li><span>Quality kiosk</span></li>
+                                <li><span>Thyrocare</span></li>
                             </ul>
                         </div>
                 </div>
@@ -117,7 +122,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-paper-plane"></i> sarveshsyadav8@gnail.com</p>
+                    <p><i class="fa-solid fa-paper-plane"></i> sarveshsyadav8@gmail.com</p>
                     <p><i class="fa-sharp fa-solid fa-phone"></i> 8433873623</p>
                     <div class="social-icons">
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
