--- a/index.html
+++ b/index.html
@@ -150,10 +150,19 @@
             </p>
             <p><i class="fa-sharp fa-solid fa-phone"></i> 8433873623</p>
             <div class="social-icons">
-              <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-              <a href="#"><i class="fa-brands fa-github"></i></a>
+              <a
+                href="https://www.linkedin.com/in/sarvesh-yadav-b63a05193"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a href="https://github.com/Sarvesh843" target="_blank"
+                ><i class="fa-brands fa-github"></i
+              ></a>
             </div>
-            <a href="/Sarvesh Samsher Yadav.pdf" download class="btn"
+            <a
+              href="/Images/Sarvesh_Samsher_Yadav.pdf"
+              download
+              class="btn btn2"
               >Download CV</a
             >
           </div>
