--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
       src="https://kit.fontawesome.com/6773008001.js"
       crossorigin="anonymous"
     ></script>
+    <script>
+      window.embeddedChatbotConfig = {
+      chatbotId: "TZ_6ezuoAoTtvbJOq7JbV",
+      domain: "www.chatbase.co"
+      }
+      </script>
+      <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="TZ_6ezuoAoTtvbJOq7JbV"
+      domain="www.chatbase.co"
+      defer>
+      </script>
   </head>
   <body>
     <div id="header">
