--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/6773008001.js"
       crossorigin="anonymous"
     ></script>
-    <script>
+    <!-- <script>
       window.embeddedChatbotConfig = {
       chatbotId: "TZ_6ezuoAoTtvbJOq7JbV",
       domain: "www.chatbase.co"
@@ -21,7 +21,9 @@
       chatbotId="TZ_6ezuoAoTtvbJOq7JbV"
       domain="www.chatbase.co"
       defer>
-      </script>
+      </script> -->
+      <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/5c79ef12-a8cd-4784-bf03-967554973630/webchat/config.js" defer></script>
   </head>
   <body>
     <div id="header">
